5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1715_3031.log
== TEST (2019-05-02 16:37:01) 
-- CODE:
x=float(int("valor de x: "))
if ((x==1) or (x<=1)):
	print("valor de x:")
elif((X==2) or (1<x<=2)):
	print("valor de x:")
elif ((x**2) or (2<x<=3)):
	print("valor de x:")
elif ((x**3) and (x>3)):
	print("valor de x:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(int("valor de x: "))
ValueError: invalid literal for int() with base 10: 'valor de x: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:32) 
-- CODE:
x=float(int("valor de x: "))

if ((x==1) or (x<=1)):
	print("valor de x:")
elif((X==2) or (1<x<=2)):
	print("valor de x:")
elif ((x**2) or (2<x<=3)):
	print("valor de x:")
elif ((x**3) and (x>3)):
	print("valor de x:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(int("valor de x: "))
ValueError: invalid literal for int() with base 10: 'valor de x: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:47) 
-- CODE:
x=float(int("valor de fx: "))

if ((x==1) or (x<=1)):
	print("valor de x:")
elif((X==2) or (1<x<=2)):
	print("valor de x:")
elif ((x**2) or (2<x<=3)):
	print("valor de x:")
elif ((x**3) and (x>3)):
	print("valor de x:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(int("valor de fx: "))
ValueError: invalid literal for int() with base 10: 'valor de fx: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:04) 
-- CODE:
x=int("valor de fx: ")

if ((x==1) or (x<=1)):
	print("valor de x:")
elif((X==2) or (1<x<=2)):
	print("valor de x:")
elif ((x**2) or (2<x<=3)):
	print("valor de x:")
elif ((x**3) and (x>3)):
	print("valor de x:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int("valor de fx: ")
ValueError: invalid literal for int() with base 10: 'valor de fx: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:18) 
-- CODE:
x=float(int("valor de fx: ")

if ((x==1) or (x<=1)):
	print("valor de x:")
elif((X==2) or (1<x<=2)):
	print("valor de x:")
elif ((x**2) or (2<x<=3)):
	print("valor de x:")
elif ((x**3) and (x>3)):
	print("valor de x:")
-- ERROR:
File "XXXX", line 3
    if ((x==1) or (x<=1)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:52) 
-- CODE:
x=float(int("valor de fx: ")

if ((x==1) and (x<=1)):
	print("valor de x:")
elif((X==2) or (1<x<=2)):
	print("valor de x:")
elif ((x**2) or (2<x<=3)):
	print("valor de x:")
elif ((x**3) and (x>3)):
	print("valor de x:")
else:
	print(round())
-- ERROR:
File "XXXX", line 3
    if ((x==1) and (x<=1)):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:02) 
-- CODE:
x=float(int("valor de fx: ")

if (x==1):
	print(round(x<+1, 2))
-- ERROR:
File "XXXX", line 3
    if (x==1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
